2015-01-19  Tim Shen  <timshen@google.com>

	PR libstdc++/64649
	Backported from mainline
	2015-01-19  Tim Shen  <timshen@google.com>

	* include/bits/regex.tcc (regex_traits<>::lookup_collatename,
	regex_traits<>::lookup_classname): Support forward iterators.
	* testsuite/28_regex/traits/char/lookup_classname.cc: New testcases.
	* testsuite/28_regex/traits/char/lookup_collatename.cc: New testcase.

2015-01-19  Tim Shen  <timshen@google.com>

	PR libstdc++/64584
	PR libstdc++/64585
	* include/bits/regex.h (basic_regex<>::basic_regex,
	basic_regex<>::assign, basic_regex<>::imbue,
	basic_regex<>::swap, basic_regex<>::mark_count): Drop NFA after
	imbuing basic_regex; Make assign() transactional against exception.
	* testsuite/28_regex/basic_regex/assign/char/string.cc: New testcase.
	* testsuite/28_regex/basic_regex/imbue/string.cc: New testcase.

2015-01-18  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/64646
	* include/bits/stl_algo.h (__is_permutation): Also test for reaching
	end of the second range.
	* testsuite/25_algorithms/is_permutation/64646.cc: New.

2015-01-09  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/64476
	* include/bits/stl_uninitialized.h (uninitialized_copy): Fix
	is_assignable arguments.
	* testsuite/20_util/specialized_algorithms/uninitialized_copy/64476.cc:
	New.

2015-01-09  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/60966
	* include/std/future (packaged_task::operator()): Increment the
	reference count on the shared state until the function returns.

2015-01-09  Tim Shen  <timshen@google.com>

	PR libstdc++/64239
	Backported form mainline
	2015-01-09  Tim Shen  <timshen@google.com>

	* include/bits/regex.h (match_results<>::swap): Use std::swap
	instead of swap.
	* include/bits/regex_compiler.tcc (_Compiler<>::_M_quantifier):
	Likewise.
	* testsuite/28_regex/match_results/swap.cc: New testcase.

2014-12-17  Tim Shen  <timshen@google.com>

	PR libstdc++/64302
	PR libstdc++/64303
	Backported form mainline